--- a/nicepage.css
+++ b/nicepage.css
@@ -2744,6 +2744,42 @@ a {
   width: 100%;
   pointer-events: none;
 }
+.u-form-text.u-text {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.u-input-row {
+  display: flex;
+  align-items: center;
+}
+.u-input-row:first-child {
+  margin-top: 0 !important;
+}
+.u-input-row input {
+  margin: 0;
+  flex-shrink: 0;
+}
+.u-input-row .u-field-label,
+.u-input-row .u-label {
+  display: inline-block;
+  margin-left: 5px;
+  margin-bottom: 0;
+}
+.u-form-radiobutton.u-form-input-layout-horizontal .u-form-radio-button-wrapper,
+.u-form-radiobutton.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper,
+.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-radio-button-wrapper,
+.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.u-form-radiobutton.u-form-input-layout-horizontal .u-form-radio-button-wrapper .u-input-row,
+.u-form-radiobutton.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper .u-input-row,
+.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-radio-button-wrapper .u-input-row,
+.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper .u-input-row {
+  margin-top: 0;
+  margin-right: 1em;
+}
 .u-form-file-upload input[type="file"] {
   display: none !important;
 }
@@ -2821,42 +2857,6 @@ a {
   flex-basis: 100%;
   margin-top: 0.5em;
   margin-bottom: 0;
-}
-.u-form-text.u-text {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.u-input-row {
-  display: flex;
-  align-items: center;
-}
-.u-input-row:first-child {
-  margin-top: 0 !important;
-}
-.u-input-row input {
-  margin: 0;
-  flex-shrink: 0;
-}
-.u-input-row .u-field-label,
-.u-input-row .u-label {
-  display: inline-block;
-  margin-left: 5px;
-  margin-bottom: 0;
-}
-.u-form-radiobutton.u-form-input-layout-horizontal .u-form-radio-button-wrapper,
-.u-form-radiobutton.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper,
-.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-radio-button-wrapper,
-.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.u-form-radiobutton.u-form-input-layout-horizontal .u-form-radio-button-wrapper .u-input-row,
-.u-form-radiobutton.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper .u-input-row,
-.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-radio-button-wrapper .u-input-row,
-.u-form-checkbox-group.u-form-input-layout-horizontal .u-form-checkbox-group-wrapper .u-input-row {
-  margin-top: 0;
-  margin-right: 1em;
 }
 .u-form-rating .u-input-hidden {
   height: 100%;
@@ -15678,8 +15678,11 @@ div.u-video,
   margin: 0;
   height: 100%;
 }
-.u-nav-popup .u-nav-item {
+.u-nav-popup.u-nav-item {
   height: auto;
+}
+.u-nav-popup.fake:not(.open) {
+  display: none;
 }
 .u-nav-popup .u-nav:not([class*="u-align-"]) .u-nav {
   text-align: inherit;
@@ -15993,9 +15996,11 @@ div.u-video,
   pointer-events: auto;
 }
 .u-dropdown-icon .u-nav-link:first-child:nth-last-child(2):after {
-  content: "\25BE";
+  content: "\2304";
   margin-left: 0.5rem;
   margin-right: -0.5rem;
+  display: inline-block;
+  transform: translateY(-20%);
 }
 .u-dropdown-icon .u-nav-container .u-nav-popup .u-nav-link:first-child:nth-last-child(2):after {
   content: "";
@@ -18202,6 +18207,12 @@ div.u-video,
   overflow: hidden;
   width: 0;
 }
+.u-enable-responsive.prevent-animation {
+  transform: none !important;
+  opacity: 1 !important;
+  will-change: auto !important;
+  filter: none !important;
+}
 .u-enable-responsive .menu-collapse {
   display: block;
 }
@@ -19470,7 +19481,6 @@ blockquote .small:before {
 .u-sorting {
   position: relative;
   min-width: 255px;
-  margin-right: auto;
 }
 .u-sorting-left .u-sorting {
   margin-left: 0 !important;
@@ -22105,14 +22115,40 @@ a.pswp__share--download:hover {
   display: flex;
   position: relative;
 }
+.u-list-control:first-child:not(:empty) {
+  margin-bottom: 10px;
+}
+.u-repeater + .u-list-control:not(:empty) {
+  margin-top: 10px;
+}
+@media (max-width: 575px) {
+  .u-list-control {
+    justify-content: center;
+  }
+}
 .u-list-control.has-categories-listbox.has-sorting,
 .u-list-control.has-pagination.has-categories-listbox,
 .u-list-control.has-pagination.has-sorting {
   display: grid;
-  grid-auto-flow: column;
+  grid-auto-flow: row dense;
   position: relative;
   align-items: center;
-  grid-template-columns: calc(33.3333%) calc(33.3333%) calc(33.3333%);
+  grid-template-columns: repeat(3, auto);
+}
+@media (max-width: 575px) {
+  .u-list-control.has-categories-listbox.has-sorting,
+  .u-list-control.has-pagination.has-categories-listbox,
+  .u-list-control.has-pagination.has-sorting {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .u-list-control.has-categories-listbox.has-sorting > *,
+  .u-list-control.has-pagination.has-categories-listbox > *,
+  .u-list-control.has-pagination.has-sorting > * {
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
 }
 .u-pagination-center.u-sorting-center .u-list-control.has-pagination.has-sorting {
   grid-template-columns: 0;
@@ -24623,6 +24659,7 @@ span.product-remove:after {
   --num-text-hover-color: unset;
   --num-border-hover-color: unset;
   --hours-spacing-vertical: unset;
+  --hours-top-spacing: unset;
   display: flex;
   flex-wrap: nowrap;
   min-width: 280px;
@@ -24634,7 +24671,7 @@ span.product-remove:after {
     flex-wrap: wrap;
   }
   .u-calendar .u-calendar-time-container {
-    margin-left: auto;
+    margin-left: auto !important;
     margin-right: auto;
   }
 }
@@ -24643,13 +24680,14 @@ span.product-remove:after {
     flex-wrap: wrap;
   }
   .u-calendar .u-calendar-time-container {
-    margin-left: auto;
+    margin-left: auto !important;
     margin-right: auto;
     width: 100%;
   }
   .u-calendar .u-calendar-time-container ul.u-calendar-time-list {
     height: auto !important;
-    display: block;
+    display: grid !important;
+    grid-template-columns: repeat(3, 33.33333333%);
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
@@ -24813,6 +24851,8 @@ span.product-remove:after {
   margin: unset;
   overflow-y: auto;
   overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: #ccc #fff;
 }
 .u-calendar .u-calendar-time-container ul.u-calendar-time-list.disabled {
   pointer-events: none;
@@ -24825,6 +24865,7 @@ span.product-remove:after {
   margin-top: var(--hours-spacing-vertical);
 }
 .u-calendar .u-calendar-time-container .u-calendar-timezone {
+  margin-top: var(--hours-top-spacing);
   margin-bottom: 5px;
   font-size: 0.75rem;
 }
@@ -24956,7 +24997,7 @@ span.product-remove:after {
   border: none;
   margin: 0 !important;
   position: absolute;
-  top: 0;
+  top: auto;
   bottom: 0;
   display: flex;
   align-items: center;
@@ -44661,9 +44702,8 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-nav-1 {
+  font-weight: 400;
   font-size: 1rem;
-  font-weight: 700;
-  background-image: none;
 }
 
 .u-header .u-nav-2 {
@@ -44673,7 +44713,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-image-1 {
   width: 147px;
   height: 32px;
-  margin: -36px auto 20px -9px;
+  margin: -36px auto 19px 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -44681,47 +44721,112 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 100%;
 }
 @media (max-width: 1199px) {
+  .u-header .u-menu-1 {
+    margin-right: 0;
+  }
+
   .u-header .u-image-1 {
-    width: 147px;
+    margin-top: -36px;
   }
 }
 
 
-
- .u-footer {
-  background-image: none;
+@media (max-width: 575px) {
+  .u-header .u-image-1 {
+    margin-top: -32px;
+    margin-bottom: 24px;
+    margin-left: -1px;
+  }
 }
-
 .u-footer .u-sheet-1 {
   min-height: 120px;
 }
 
+.u-footer .u-image-1 {
+  width: 168px;
+  height: 48px;
+  margin: 36px auto 0 0;
+}
+
+.u-footer .u-social-icons-1 {
+  height: 23px;
+  min-height: 16px;
+  width: 122px;
+  min-width: 94px;
+  white-space: nowrap;
+  margin: -37px 0 0 auto;
+}
+
+.u-footer .u-icon-1 {
+  color: rgb(59, 89, 152) !important;
+}
+
+.u-footer .u-icon-2 {
+  color: rgb(85, 172, 238) !important;
+}
+
+.u-footer .u-icon-3 {
+  color: rgb(197, 54, 164) !important;
+}
+
+.u-footer .u-icon-4 {
+  color: rgb(0, 122, 185) !important;
+}
+
 .u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
+  width: 631px;
+  font-size: 1.125rem;
+  margin: -24px auto 46px;
 }
 @media (max-width: 1199px) {
-  .u-footer .u-sheet-1 {
-    min-height: 99px;
+  .u-footer .u-text-1 {
+    margin-top: -24px;
   }
 }
-@media (max-width: 991px) {
-  .u-footer .u-sheet-1 {
-    min-height: 76px;
-  }
-}
+
 @media (max-width: 767px) {
-  .u-footer .u-sheet-1 {
-    min-height: 57px;
+  .u-footer .u-image-1 {
+    margin-top: -66px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 46px;
+    margin-right: auto;
+  }
+
+  .u-footer .u-text-1 {
+    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 49px;
+    font-size: 1rem;
   }
 }
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
-    min-height: 36px;
+    min-height: 127px;
+  }
+
+  .u-footer .u-image-1 {
+    width: 84px;
+    height: 32px;
+    margin-top: 48px;
+    margin-left: -24px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    height: 16px;
+    width: 94px;
+    margin-top: -24px;
+    margin-right: -21px;
   }
 
   .u-footer .u-text-1 {
-    width: 340px;
+    font-size: 0.625rem;
+    width: 137px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
   }
 }
 
