--- a/index.css
+++ b/index.css
@@ -1,41 +1,39 @@
  .u-section-1 {
-  background-image: url('images/whitewallpapercopy_4.png'), linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
+  background-image: url('images/whitewallpapercopy_4.png'), linear-gradient(to bottom, rgba(204, 211, 219, 1), rgba(204, 211, 219, 1));
   background-position: 50% 50%, 50% 50%;
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 990px;
+  min-height: 605px;
 }
 
 .u-section-1 .u-group-1 {
-  width: 570px;
-  min-height: 618px;
+  width: 529px;
+  min-height: 529px;
   height: auto;
-  margin: 186px auto 60px 45px;
+  margin: 38px auto 38px 62px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 30px;
+  padding: 30px 0;
 }
 
 .u-section-1 .u-text-1 {
-  margin-bottom: 0;
-  margin-top: 0;
-  font-size: 8.125rem;
   font-weight: 700;
+  margin: 0 97px 0 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 2.25rem;
-  font-weight: 400;
-  margin: 0 auto 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-text-3 {
-  line-height: 2;
-  margin: 29px 0 0;
+  line-height: 1.2;
+  letter-spacing: 0px;
+  font-weight: 500;
+  margin: 21px 97px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -45,19 +43,17 @@
   align-self: center;
   background-image: none;
   border-style: none;
-  margin: 31px auto 0 0;
+  margin: 21px auto 0 0;
   padding: 20px 45px 20px 44px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 990px;
+  }
+
   .u-section-1 .u-group-1 {
     height: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    font-size: 7.5rem;
   }
 }
 
@@ -67,14 +63,7 @@
   }
 
   .u-section-1 .u-group-1 {
-    width: 540px;
-    margin-top: 355px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 11px;
   }
 }
 
@@ -86,8 +75,7 @@
   .u-section-1 .u-group-1 {
     min-height: 827px;
     width: 243px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -95,23 +83,49 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 5rem;
+    margin-right: 0;
   }
 
-  .u-section-1 .u-text-2 {
-    font-size: 1.875rem;
+  .u-section-1 .u-text-3 {
+    margin-right: 0;
   }
 } .u-section-2 {
-  min-height: 639px;
+  background-image: linear-gradient(to bottom, rgba(229, 229, 229, 1), rgba(229, 229, 229, 1));
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 550px;
+}
+
+.u-section-2 .u-group-1 {
+  --radius: 30px;
+  min-height: 482px;
+  height: auto;
+  width: 1016px;
+  margin: 34px auto;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 0 2px;
+}
+
+.u-section-2 .u-image-1 {
+  width: 479px;
+  left: auto;
+  --radius: 30px;
+  right: 0;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  width: 605px;
-  margin: 135px calc(((100% - 1140px) / 2)) 0 auto;
+  width: 481px;
+  margin: 65px auto 0 54px;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 472px;
+  min-height: 351px;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
@@ -119,18 +133,18 @@
   --animation-custom_in-scale: 1;
 }
 
-.u-section-2 .u-container-layout-1 {
-  padding: 0 30px;
+.u-section-2 .u-container-layout-2 {
+  padding: 0;
 }
 
 .u-section-2 .u-text-1 {
-  font-weight: 700;
-  font-size: 3.75rem;
+  font-weight: 500;
   margin: 0 auto 0 0;
 }
 
 .u-section-2 .u-text-2 {
-  margin: 17px 0 0 auto;
+  background-image: none;
+  margin: 17px 30px 0 auto;
 }
 
 .u-section-2 .u-btn-1 {
@@ -145,280 +159,251 @@
   background-image: none;
   letter-spacing: 1px;
   border-style: solid;
-  margin: 32px 0 0 auto;
-}
-
-.u-section-2 .u-image-1 {
-  width: 523px;
-  height: 640px;
-  transform-origin: center center;
-  box-shadow: 2px 2px 8px 0px rgba(128,128,128,1);
-  transform: scaleX(-1);
-  margin: -607px auto -1px 0;
+  margin: 31px auto 0 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-layout-wrap-1 {
-    margin-right: calc(((100% - 940px) / 2));
-  }
-
-  .u-section-2 .u-btn-1 {
-    --radius: 100px;
-    padding: 17px 52px 18px;
+  .u-section-2 .u-group-1 {
+    width: 940px;
+    height: auto;
   }
 
   .u-section-2 .u-image-1 {
-    margin-top: 20px;
-    margin-bottom: initial;
+    height: 482px;
+    left: auto;
+    bottom: auto;
+    right: auto;
+    top: auto;
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-2 {
-    min-height: 267px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-right: calc(((100% - 720px) / 2));
+  .u-section-2 .u-group-1 {
+    width: 720px;
   }
 
   .u-section-2 .u-layout-cell-1 {
     min-height: 100px;
   }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 0;
-  }
-
-  .u-section-2 .u-image-1 {
-    margin-bottom: -1px;
-  }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-layout-wrap-1 {
+  .u-section-2 .u-group-1 {
     width: 540px;
-    margin-right: calc(((100% - 540px) / 2));
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-text-1 {
-    font-size: 3rem;
   }
 }
 
 @media (max-width: 575px) {
-   .u-section-2 {
-    min-height: 43px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
+  .u-section-2 .u-group-1 {
     width: 340px;
-    margin-right: calc(((100% - 340px) / 2));
-  }
-
-  .u-section-2 .u-text-1 {
-    font-size: 2.25rem;
-  }
-
-  .u-section-2 .u-btn-1 {
-    font-size: 1rem;
   }
 
   .u-section-2 .u-image-1 {
-    width: 340px;
-    height: 416px;
+    width: 336px;
+    height: 338px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    width: 336px;
+    margin-left: 0;
   }
 } .u-section-3 {
-  background-image: url('images/1RealisticToteBagMockups2024_DekGrafis.jpg'), linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
+  background-image: url('images/photo-1577190651915-bf62d54d5b36.jpeg'), linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
   background-position: 50% 50%, 50% 50%;
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 979px;
-}
-
-.u-section-3 .u-layout-wrap-1 {
-  margin-top: 47px;
-  margin-bottom: -46px;
-}
-
-.u-section-3 .u-layout-cell-1 {
-  min-height: 431px;
-}
-
-.u-section-3 .u-container-layout-1 {
-  padding: 0;
+  min-height: 855px;
 }
 
 .u-section-3 .u-group-1 {
-  min-height: 193px;
+  min-height: 120px;
   height: auto;
   --animation-custom_in-translate_x: 300px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  width: 1140px;
-  margin: 62px -380px 0 auto;
+  width: 1020px;
+  margin: 60px auto 0;
 }
 
-.u-section-3 .u-container-layout-2 {
-  padding-left: 30px;
-  padding-right: 30px;
+.u-section-3 .u-container-layout-1 {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .u-section-3 .u-text-1 {
   font-size: 3rem;
-  margin: 13px auto 0 0;
+  margin: 13px 185px 0 0;
 }
 
 .u-section-3 .u-text-2 {
-  margin: 16px auto 0 0;
+  font-size: 1.5rem;
+  margin: 16px 732px 0 0;
 }
 
 .u-section-3 .u-group-2 {
-  min-height: 257px;
+  min-height: 267px;
   height: auto;
   --animation-custom_in-translate_x: 300px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  width: 1140px;
-  margin: -33px -380px -47px auto;
+  width: 1023px;
+  --radius: 50px;
+  margin: 34px auto 0;
 }
 
-.u-section-3 .u-container-layout-3 {
-  padding: 30px;
+.u-section-3 .u-container-layout-2 {
+  padding: 30px 39px;
 }
 
 .u-section-3 .u-icon-1 {
-  width: 64px;
-  height: 64px;
+  width: 61px;
+  height: 61px;
   background-image: none;
   color: rgb(255, 255, 255) !important;
   margin: 0 auto 0 0;
-  padding: 13px;
+  padding: 5px;
 }
 
 .u-section-3 .u-text-3 {
-  margin: 30px auto 0 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 28px auto 0 0;
 }
 
 .u-section-3 .u-text-4 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-layout-cell-2 {
-  min-height: 431px;
-}
-
-.u-section-3 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-3 .u-layout-cell-3 {
-  min-height: 547px;
-}
-
-.u-section-3 .u-container-layout-5 {
-  padding: 0;
+  font-size: 1.25rem;
+  margin: 25px 0 0;
 }
 
 .u-section-3 .u-group-3 {
-  min-height: 257px;
-  margin-top: 99px;
-  margin-bottom: 0;
+  min-height: 251px;
   height: auto;
   --animation-custom_in-translate_x: -200px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
+  width: 1021px;
+  margin: 43px auto 60px;
 }
 
-.u-section-3 .u-container-layout-6 {
-  padding: 23px 30px;
+.u-section-3 .u-container-layout-3 {
+  padding: 3px 20px;
 }
 
 .u-section-3 .u-icon-2 {
-  width: 64px;
-  height: 64px;
+  width: 63px;
+  height: 63px;
   background-image: none;
   color: rgb(255, 255, 255) !important;
-  margin: 0 auto 0 0;
-  padding: 13px;
+  margin: 30px auto 0 20px;
+  padding: 12px;
 }
 
 .u-section-3 .u-text-5 {
-  margin: 30px auto 0 0;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 21px auto 0 20px;
 }
 
 .u-section-3 .u-text-6 {
-  margin: 20px auto 0 0;
+  font-size: 1.25rem;
+  margin: 21px 15px 0 19px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1244px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 355px;
+   .u-section-3 {
+    min-height: 705px;
   }
 
   .u-section-3 .u-group-1 {
-    width: 627px;
-    margin-right: 0;
+    width: 940px;
     height: auto;
   }
 
-  .u-section-3 .u-container-layout-2 {
-    padding-top: 30px;
-    padding-bottom: 30px;
+  .u-section-3 .u-text-1 {
+    margin-right: 105px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 652px;
   }
 
   .u-section-3 .u-group-2 {
-    width: 627px;
-    margin-right: 0;
+    width: 940px;
     height: auto;
   }
 
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 355px;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 451px;
+  .u-section-3 .u-text-4 {
+    margin-left: 1px;
   }
 
   .u-section-3 .u-group-3 {
+    width: 940px;
     height: auto;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 957px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 409px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-right: 11px;
-    padding-left: 10px;
+   .u-section-3 {
+    min-height: 540px;
   }
 
   .u-section-3 .u-group-1 {
-    width: 480px;
+    width: 720px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 432px;
+  }
+
+  .u-section-3 .u-group-2 {
+    width: 720px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-3 .u-group-3 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+   .u-section-3 {
+    min-height: 405px;
+  }
+
+  .u-section-3 .u-group-1 {
+    width: 540px;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-size: 2.25rem;
+  }
+
+  .u-section-3 .u-text-2 {
+    font-size: 1rem;
+    margin-right: 252px;
+  }
+
+  .u-section-3 .u-group-2 {
+    width: 540px;
   }
 
   .u-section-3 .u-container-layout-2 {
@@ -426,12 +411,12 @@
     padding-right: 10px;
   }
 
-  .u-section-3 .u-text-1 {
-    font-size: 2.25rem;
+  .u-section-3 .u-text-4 {
+    font-size: 1rem;
   }
 
-  .u-section-3 .u-group-2 {
-    width: 480px;
+  .u-section-3 .u-group-3 {
+    width: 540px;
   }
 
   .u-section-3 .u-container-layout-3 {
@@ -439,81 +424,14 @@
     padding-right: 10px;
   }
 
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 409px;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 397px;
-  }
-
-  .u-section-3 .u-container-layout-5 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-container-layout-6 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1358px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-3 .u-text-1 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-container-layout-5 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-3 .u-icon-2 {
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-left: auto;
-  }
-
   .u-section-3 .u-text-6 {
-    margin-left: auto;
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1157px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
+   .u-section-3 {
+    min-height: 255px;
   }
 
   .u-section-3 .u-group-1 {
@@ -521,18 +439,19 @@
   }
 
   .u-section-3 .u-text-1 {
-    font-size: 1.5rem;
+    font-size: 1.875rem;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 52px;
   }
 
   .u-section-3 .u-group-2 {
-    min-height: 300px;
     width: 340px;
   }
 
-  .u-section-3 .u-text-4 {
-    width: auto;
-    margin-top: 19px;
-    margin-right: 0;
+  .u-section-3 .u-group-3 {
+    width: 340px;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 616px;
@@ -565,11 +484,12 @@
 
 .u-section-4 .u-text-1 {
   font-weight: 700;
-  font-size: 3.75rem;
+  font-size: 6.25rem;
   margin: 6px auto 0;
 }
 
 .u-section-4 .u-text-2 {
+  font-size: 1.5rem;
   margin: 5px auto 0;
 }
 
@@ -588,12 +508,12 @@
 
 .u-section-4 .u-text-3 {
   font-weight: 700;
-  font-size: 3.75rem;
+  font-size: 6.25rem;
   margin: 6px auto 0;
 }
 
 .u-section-4 .u-text-4 {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   margin: 5px auto 0;
 }
 
@@ -612,12 +532,12 @@
 
 .u-section-4 .u-text-5 {
   font-weight: 700;
-  font-size: 3.75rem;
+  font-size: 6.25rem;
   margin: 6px auto 0;
 }
 
 .u-section-4 .u-text-6 {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   margin: 5px auto 0;
 }
 
@@ -636,17 +556,17 @@
 
 .u-section-4 .u-text-7 {
   font-weight: 700;
-  font-size: 3.75rem;
+  font-size: 6.25rem;
   margin: 6px auto 0;
 }
 
 .u-section-4 .u-text-8 {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   margin: 5px auto 0;
 }
 
 .u-section-4 .u-group-1 {
-  min-height: 409px;
+  min-height: 391px;
   height: auto;
   width: 553px;
   --animation-custom_in-translate_x: 300px;
@@ -654,21 +574,21 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: -409px 0 60px auto;
+  margin: -409px 0 18px auto;
 }
 
 .u-section-4 .u-container-layout-5 {
-  padding: 0 0 30px 30px;
+  padding: 0 1px 30px;
 }
 
 .u-section-4 .u-text-9 {
   font-weight: 600;
-  margin: 0 auto 0 0;
+  margin: 0 348px 0 0;
 }
 
 .u-section-4 .u-text-10 {
   font-weight: 400;
-  margin: 30px 0 0 auto;
+  margin: 29px 0 0;
 }
 
 .u-section-4 .u-btn-1 {
@@ -680,7 +600,7 @@
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   font-weight: 700;
-  margin: 30px auto 0 0;
+  margin: 22px auto 0 0;
   padding: 17px 53px 19px 51px;
 }
 
@@ -739,7 +659,7 @@
   .u-section-4 .u-group-1 {
     min-height: 320px;
     margin-top: 42px;
-    margin-bottom: 60px;
+    margin-bottom: 18px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -796,6 +716,10 @@
   .u-section-4 .u-text-7 {
     font-size: 2.25rem;
   }
+
+  .u-section-4 .u-text-9 {
+    margin-right: 335px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -839,6 +763,10 @@
   .u-section-4 .u-text-7 {
     font-size: 1.5rem;
   }
+
+  .u-section-4 .u-text-9 {
+    margin-right: 135px;
+  }
 } .u-section-5 {
   background-position: 50% 50%, 50% 50%;
   background-repeat: no-repeat, no-repeat;
@@ -873,7 +801,7 @@
 }
 
 .u-section-5 .u-layout-cell-2 {
-  min-height: 526px;
+  min-height: 562px;
 }
 
 .u-section-5 .u-container-layout-2 {
@@ -906,7 +834,7 @@
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 434px;
+    min-height: 463px;
   }
 }
 
